--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon"
+    href="https://cdn1.iconfinder.com/data/icons/tourist-agency-filloutline/64/signboard-travel_agency-tourism-tour-sign-travel-256.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
